syntax = "proto3";
package pb;
option go_package = "./pb"; // Escolhe a linguagem (go) e o formato do pacote que vocÃª quer que seja gerado os arquivos

message User {
    string id = 1;
    string name = 2;
    string email = 3;
}

message UserResultStream {
    string status = 1;
    User user = 2;
}

message Users {
    repeated User user = 1;
}

service UserService {
              // request     // response
    rpc AddUser (User) returns (User);
    rpc AddUserVerbose (User) returns (stream UserResultStream);
    rpc AddUsers (stream User) returns (Users);
    rpc AddUserStreamBoth (stream User) returns (stream UserResultStream);
}